--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   draggable_home: ^1.0.2
   carousel_slider: ^4.2.1
   url_launcher: ^6.1.7
+  flutter_web_frame: ^0.0.3
 
 dev_dependencies:
   flutter_launcher_icons: ^0.11.0
